# AIoutfit

./: .env.example  .gitignore  README.md  docker-compose.yml
.amazonq/rules/: Japanese.md  step.md
backend/: .gitignore  Dockerfile  entrypoint.sh  gunicorn.conf.py  pyproject.toml  requirements.txt
backend/app/: app.py  database.py  models.py  routes.py  seed.py  utils.py  utils2.py
backend/app/routes/: auth.py  chat.py  clothing.py  suggestion.py  upload.py
backend/migrations/: env.py
backend/migrations/versions/: 1b04f8a6f3c5_add_age_and_gender_to_users.py  52b108adb177_あなたの変更内容を説明するメッセージ.py  590816e5f786_add_is_available_to_cloth_model.py  5e742175dbbf_initial_migration.py  db3f275b21d5_initial_migration_from_final_models.py
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: index.ts
frontend/src/components/: ImageUpload.tsx
frontend/src/hooks/: useAuth.tsx
frontend/src/pages/: ChatPage.tsx  CheckPage.tsx  ClosetPage.tsx  DashboardPage.tsx  FrontPage.tsx  HistoryPage.tsx  HomePage.tsx  LoginPage.tsx  RegisterPage.tsx  ResultPage.tsx  SettingsPage.tsx  SuggestionPage.tsx  UploadPage.tsx  normal.module.css
mysql/: init.sql
