[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "flask>=3.1.1",
    "flask-cors>=6.0.1",
    "flask-migrate>=4.1.0",
    "gunicorn>=23.0.0",
    "loguru>=0.7.3",
    "mysql-connector-python>=9.3.0",
    "openai>=1.91.0",
    "pillow>=11.2.1",
    "pinecone>=7.2.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "sqlalchemy>=2.0.41",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "tqdm>=4.67.1",
    "transformers>=4.52.4",
    "pycountry (>=24.6.1,<25.0.0)",
]
